# agentic-chunker

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-15-agentic-chunker-batch-v2.md  2026-06-15-agentic-chunker-dedupe-metadata.md  2026-06-15-agentic-chunker.md
docs/superpowers/specs/: 2026-06-15-agentic-chunker-batch-v2-design.md  2026-06-15-agentic-chunker-dedupe-metadata-design.md  2026-06-15-agentic-chunker-design.md  2026-06-15-agentic-chunker-graph-architecture.md  2026-06-15-agentic-chunker-tune-defaults-design.md
examples/: evaluate_md.py  smoke_test.py
examples/gold_queries/: mdout.json
src/agentic_chunker/: __init__.py  _agent.py  _chunker.py  _common.py  _document_graph.py  _domain.py  _domain_models.py  _graph.py  _grouping.py  _legacy_agent.py  _legacy_propositions.py  _models.py  _propositions.py  _references.py  _result.py  _split.py  _structured.py  _tables.py  _unit_agent.py  _units.py  llm.py
tests/: test_agent.py  test_chunker.py  test_common.py  test_document_graph.py  test_domain.py  test_evaluate_md.py  test_graph.py  test_grouping.py  test_legacy_agent.py  test_legacy_propositions.py  test_llm.py  test_models.py  test_propositions.py  test_references.py  test_split.py  test_tables.py  test_unit_agent.py
