[project]
name = "agentic-chunker"
version = "0.1.0"
description = "Proposition-based agentic chunking for RAG, in pure Python"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Core is stdlib only (urllib for the OpenAI-compatible LLM calls).
[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_chunker"]
